[metadata]
# replace with your username:
name = winregmgr
version = 0.0.3
author = Egor Wexler
author_email = egor.wexler@icloud.com
description = Context manager for Windows Registry manipulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LuckyKarter/winregmgr
project_urls =
    Bug Tracker = https://github.com/LuckyKarter/winregmgr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
packages = find:
python_requires = >=3.6